added the final touches
